PyMaker/datas/object2/RawHTML/i17301/Python_DOC_referPages.invalid-syntax-error-in-python-print-statement-using-file.txt
<div class="post-text" itemprop="text">
<pre><code>print('Group output sizes: |A| = {}, |B| = {}'.format(len(A),len(B)),    file=stderr)
                                                                             ^
SyntaxError: invalid syntax
</code></pre>
<p>Can anyone please help what this error is about? I initially thought its because of print syntax but it is not I think.</p>
<p>Please help.</p>
</div>
<div class="post-text" itemprop="text">
<p>It seems as if you are trying to use Python 3.x's <a href="http://docs.python.org/3/library/functions.html#print" rel="nofollow"><code>print</code></a> function in Python 2.x.  In order to do so, you need to first import <code>print_function</code> from <a href="http://docs.python.org/2/library/__future__.html" rel="nofollow"><code>__future__</code></a>:</p>
<p>Place the following line at the very top of your source file, after any comments and/or docstrings:</p>
<pre><code>from __future__ import print_function
</code></pre>
<hr/>
<p>Below is a demonstration:</p>
<pre><code>&gt;&gt;&gt; # Python 2.x interpreter session
...
&gt;&gt;&gt; print('a', 'b', sep=',')
  File "&lt;stdin&gt;", line 1
    print('a', 'b', sep=',')
                       ^
SyntaxError: invalid syntax
&gt;&gt;&gt;
</code></pre>
<p><br/></p>
<pre><code>&gt;&gt;&gt; # Another Python 2.x interpreter session
...
&gt;&gt;&gt; from __future__ import print_function
&gt;&gt;&gt; print('a', 'b', sep=',')
a,b
&gt;&gt;&gt;
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>It looks like you are trying to use the Python 3 <code>print</code> syntax in Python 2.</p>
<p>Either use a Python 3 interpreter, or rewrite the <code>print</code> like so:</p>
<pre><code>print &gt;&gt;sys.stderr, 'Group output sizes: |A| = {}, |B| = {}'.format(len(A),len(B))
</code></pre>
</div>
<span class="comment-copy">Don't run Python 3 code in Python 2.</span>
<span class="comment-copy"><code>print</code> does not accept keyword arguments in Python 2.x</span>
